--- a/templates/newpost.html
+++ b/templates/newpost.html
@@ -2,7 +2,7 @@
 
 {% block content %}
     <h1>Create a New Post</h1>
-         <form action='/newpost' method='post'>
+         <form method='post'>
         <label>
             Title:
             <input type="text" name='blog_title' />{{title_error}}
