--- a/templates/base.html
+++ b/templates/base.html
@@ -9,7 +9,16 @@
         </style>
     </head>
 <body>
-<h3><ul> <a href='/blog'>*Main Page</a> <a href='/newpost'>*Create a New Post</a></ul></h3>
+<h3> <a href='/'> *Home </a><a href="/blog"> *Posts </a><a href='/newpost'> *Create a New Post </a> <a href ='/logout'> *Logout </a></h3>
+
+
+{% with messages = get_flashed_messages(with_categories=True) %}
+        <ul>
+        {% for category,message in messages %}
+            <li class="{{category}}">{{message}}</li>
+        {% endfor %}
+        </ul>
+    {% endwith %}
     {% block content %}
     {% endblock %}
 
